--- a/index.html
+++ b/index.html
@@ -49,14 +49,7 @@
             background: #2c2c70;
         }
     </style>
-</head>
-<body>
-    <div class="login-box">
-        <h2>JEE Books Login</h2>
-        <input type="text" placeholder="Enter Name" />
-        <input type="password" placeholder="Enter Password" />
-        <button>Login</button>
-    </div>
+
 <script>
 document.querySelector('button').addEventListener('click', function(){
   var name = document.querySelector('input[type=text]').value;
@@ -69,7 +62,18 @@ document.querySelector('button').addEventListener('click', function(){
 });
 </script>
 
+</head>
+<body>
+    <div class="login-box">
+        <h2>JEE Books Login</h2>
+        <input type="text" placeholder="Enter Password" />
+        <input type="password" placeholder="Enter Name" />
+        <button>Login</button>
+    </div>
+
+
 
 </body>
 </html>
+
 
