--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JEE Books - Login</title>
+    <title>PHANTOM GAMES - LOGIN</title>
     <style>
         body {
             margin: 0;
@@ -65,7 +65,7 @@ document.querySelector('button').addEventListener('click', function(){
 </head>
 <body>
     <div class="login-box">
-        <h2>JEE Books Login</h2>
+        <h2>PHANTOM GAMES LOGIN</h2>
         <input type="password" placeholder="Enter Password" />
         <input type="text" placeholder="Enter Name" />
         <button>Login</button>
@@ -75,6 +75,7 @@ document.querySelector('button').addEventListener('click', function(){
 
 </body>
 </html>
+
 
 
 
